--- a/index.html
+++ b/index.html
@@ -4,11 +4,51 @@
         <meta charset="UTF-8" />
         <meta http-equiv="X-UA-Compatible" content="IE=edge" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+        <!-- link font Poppin -->
+        <link rel="preconnect" href="https://fonts.googleapis.com" />
+        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+        <link
+            href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600;700&display=swap"
+            rel="stylesheet"
+        />
+        <!-- link css -->
+        <link rel="stylesheet" href="./assets/css/reset.css" />
+        <link rel="stylesheet" href="./assets/css/style.css" />
         <title>My Project 2.1</title>
     </head>
-    <body>
-        <h1>
-            Lorem ipsum, dolor sit amet consectetur adipisicing elit. Eum, odit!
-        </h1>
+    <body style="height: 2000px">
+        <!-- header -->
+        <header class="header fixed">
+            <div class="main-content">
+                <div class="body">
+                    <section class="logo">
+                        <img src="./assets/css/icon/Logo.svg" alt="Besnik." />
+                    </section>
+                    <nav class="navbar">
+                        <ul class="list">
+                            <li class="item active">
+                                <a href="#!">Home</a>
+                            </li>
+                            <li class="item">
+                                <a href="#!">Features</a>
+                            </li>
+                            <li class="item">
+                                <a href="#!">Pricing</a>
+                            </li>
+                            <li class="item">
+                                <a href="#!">About</a>
+                            </li>
+                            <li class="item">
+                                <a href="#!">Contact</a>
+                            </li>
+                        </ul>
+                    </nav>
+                    <section class="action">
+                        <a href="#!" class="action__btn">Sign in</a>
+                        <a href="#!" class="action__btn">Sign up</a>
+                    </section>
+                </div>
+            </div>
+        </header>
     </body>
 </html>
