Complete hero + feature

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
         <link rel="preconnect" href="https://fonts.googleapis.com" />
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
         <link
-            href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600;700&display=swap"
+            href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;600;700&display=swap"
             rel="stylesheet"
         />
         <!-- link css -->
@@ -50,5 +50,149 @@
                 </div>
             </div>
         </header>
+        <!-- main -->
+        <main>
+            <!-- hero -->
+            <section class="hero">
+                <div class="main-content">
+                    <div class="row">
+                        <div class="info">
+                            <span class="cmt">😎 EASY LEAENING PLATFORM</span>
+                            <h1 class="title">Words learner come here.</h1>
+                            <p class="desc">
+                                Build skills with courses, certificates, and get
+                                online knowledge from our world-class platform.
+                            </p>
+                            <dic class="cta-group">
+                                <button class="btn">Get Started</button>
+                                <button class="play-btn">
+                                    <img
+                                        src="./assets/css/icon/play.svg"
+                                        alt=""
+                                    />
+                                </button>
+                            </dic>
+                        </div>
+                        <div class="media-block">
+                            <img
+                                src="./assets/css/img/hero-img.jpg"
+                                alt=""
+                                class="img-block"
+                            />
+                            <div class="item-1">
+                                <img
+                                    src="./assets/css/icon/Book.svg"
+                                    alt=""
+                                    class="book"
+                                />
+                                <span class="desc">Courses 1000+</span>
+                            </div>
+                            <div class="item-2">
+                                <span class="desc">Schedules</span>
+                                <div class="chart-group">
+                                    <div class="chart"></div>
+                                    <div class="chart"></div>
+                                    <div class="chart"></div>
+                                    <div class="chart"></div>
+                                </div>
+                            </div>
+                            <div class="item-3">
+                                <p class="desc">Our Active Students</p>
+                                <div class="avatar">
+                                    <img
+                                        src="./assets/css/img/hero-avt.jpg"
+                                        alt=""
+                                        class="avt"
+                                    />
+                                    <img
+                                        src="./assets/css/img/hero-avt-1.jpg"
+                                        alt=""
+                                        class="avt"
+                                    />
+                                    <img
+                                        src="./assets/css/img/hero-avt-2.jpg"
+                                        alt=""
+                                        class="avt"
+                                    />
+
+                                    <span class="avt">D</span>
+                                    <span class="avt">10K+</span>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </section>
+
+            <!-- feature -->
+            <section class="feature">
+                <div class="main-content">
+                    <div class="body">
+                        <section class="feature-top">
+                            <span class="sub-title">F E A T U R E S</span>
+                            <h2 class="heading">
+                                We are providing suitable features for students.
+                            </h2>
+                            <p class="desc">
+                                Read our awesome feature that is absolutely suit
+                                for you. Explore the feature and know the best.
+                            </p>
+                        </section>
+                        <section class="list">
+                            <div class="item">
+                                <a href="#!">
+                                    <img
+                                        src="./assets/css/icon/live.svg"
+                                        alt=""
+                                        class="icon"
+                                    />
+                                </a>
+                                <a href="#!">
+                                    <p class="label">Live Class</p>
+                                </a>
+                                <p class="desc text">
+                                    We are providing live classes with the best
+                                    teacher for you
+                                </p>
+                            </div>
+                            <div class="item">
+                                <a href="#!">
+                                    <img
+                                        src="./assets/css/icon/discuss.svg"
+                                        alt=""
+                                        class="icon"
+                                    />
+                                </a>
+                                <a href="#!">
+                                    <p class="label">Discuss</p>
+                                </a>
+                                <p class="desc text">
+                                    Conversation with teachers or another
+                                    students about task or any other thing
+                                    Conversation with teachers or another
+                                    students about task or any other thing
+                                </p>
+                            </div>
+                            <div class="item">
+                                <a href="#!">
+                                    <img
+                                        src="./assets/css/icon/task.svg"
+                                        alt=""
+                                        class="icon"
+                                    />
+                                </a>
+                                <a href="#!">
+                                    <p class="label">Task</p>
+                                </a>
+                                <p class="desc text">
+                                    We give every of our students task for
+                                    gathering knowledge at home
+                                </p>
+                            </div>
+                        </section>
+                    </div>
+                </div>
+            </section>
+        </main>
     </body>
 </html>
