Complete popular + stats + feedback

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
         <link rel="stylesheet" href="./assets/css/style.css" />
         <title>My Project 2.1</title>
     </head>
-    <body style="height: 2000px">
+    <body style="height: 5000px">
         <!-- header -->
         <header class="header fixed">
             <div class="main-content">
@@ -189,6 +189,169 @@
                                     gathering knowledge at home
                                 </p>
                             </div>
+                        </section>
+                    </div>
+                </div>
+            </section>
+
+            <!-- popular -->
+            <section class="popular">
+                <div class="main-content">
+                    <div class="popular-top">
+                        <span class="sub-title">C O U R S E S</span>
+                        <h2 class="heading">Popular Courses</h2>
+                        <div class="sub-heading">
+                            <p class="desc">
+                                Check out our most poular courses that suit for
+                                you. Here you can find your favourite one.
+                            </p>
+                            <a href="#!" class="cta">View All Courses</a>
+                        </div>
+                    </div>
+                    <section class="list">
+                        <section class="item">
+                            <a href="#!">
+                                <img
+                                    src="./assets/css/img/courses-1.jpg"
+                                    alt=""
+                                    class="img-courses"
+                                />
+                            </a>
+                            <div class="info-courses">
+                                <h3 class="title">Web Design</h3>
+                                <p class="price">Fee <strong>$200</strong></p>
+                                <p class="desc">
+                                    Web design basic to higer level
+                                </p>
+                                <div class="info">
+                                    <p>40 Classes</p>
+                                    <p>3 Months</p>
+                                </div>
+                            </div>
+                        </section>
+                        <section class="item">
+                            <a href="#!">
+                                <img
+                                    src="./assets/css/img/courses-2.jpg"
+                                    alt=""
+                                    class="img-courses"
+                                />
+                            </a>
+                            <div class="info-courses">
+                                <h3 class="title">UI/UX Design</h3>
+                                <p class="price">Fee <strong>$350</strong></p>
+                                <p class="desc">
+                                    Web design basic to higer level
+                                </p>
+                                <div class="info">
+                                    <p>50 Classes</p>
+                                    <p>4 Months</p>
+                                </div>
+                            </div>
+                        </section>
+                        <section class="item">
+                            <a href="#!">
+                                <img
+                                    src="./assets/css/img/courses-3.jpg"
+                                    alt=""
+                                    class="img-courses"
+                                />
+                            </a>
+                            <div class="info-courses">
+                                <h3 class="title">Web Development</h3>
+                                <p class="price">Fee <strong>$250</strong></p>
+                                <p class="desc">
+                                    Web design basic to higer level
+                                </p>
+                                <div class="info">
+                                    <p>30 Classes</p>
+                                    <p>3 Months</p>
+                                </div>
+                            </div>
+                        </section>
+                    </section>
+                </div>
+            </section>
+
+            <!-- stats -->
+            <section class="stats">
+                <div class="body">
+                    <div class="row">
+                        <div class="column">
+                            <p class="data">100+</p>
+                            <p class="desc">Popular Courses</p>
+                        </div>
+                        <div class="column">
+                            <p class="data">500+</p>
+                            <p class="desc">Skilled Trainer</p>
+                        </div>
+                        <div class="column">
+                            <p class="data">1M+</p>
+                            <p class="desc">Student Learning</p>
+                        </div>
+                    </div>
+                </div>
+            </section>
+
+            <!-- feedback -->
+            <section class="feedback">
+                <div class="main-content">
+                    <div class="body">
+                        <section class="info-block">
+                            <img src="./assets/css/icon/quot.svg" alt="" />
+                            <blockquote>
+                                “They are the best people. And this is the
+                                suitable platform to learn from distance.”
+                            </blockquote>
+                            <p class="author">
+                                <strong>Ben Foakes,</strong>student.
+                            </p>
+                            <div class="control-group">
+                                <button class="btn-control">
+                                    <img
+                                        src="./assets/css/icon/left-chavron.svg"
+                                        alt=""
+                                    />
+                                </button>
+                                <button class="btn-control">
+                                    <img
+                                        src="./assets/css/icon/right-chavron.svg"
+                                        alt=""
+                                    />
+                                </button>
+                            </div>
+                        </section>
+                        <section class="avt-group">
+                            <img
+                                src="./assets/css/img/avt-1.jpg"
+                                alt=""
+                                class="avt"
+                            />
+                            <img
+                                src="./assets/css/img/avt-2.jpg"
+                                alt=""
+                                class="avt"
+                            />
+                            <img
+                                src="./assets/css/img/avt-3.jpg"
+                                alt=""
+                                class="avt"
+                            />
+                            <img
+                                src="./assets/css/img/avt-4.jpg"
+                                alt=""
+                                class="avt"
+                            />
+                            <img
+                                src="./assets/css/img/avt-5.jpg"
+                                alt=""
+                                class="avt"
+                            />
+                            <img
+                                src="./assets/css/img/avt-6.jpg"
+                                alt=""
+                                class="avt"
+                            />
                         </section>
                     </div>
                 </div>
