--- a/index.html
+++ b/index.html
@@ -11,35 +11,117 @@
             href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;600;700&display=swap"
             rel="stylesheet"
         />
+        <!-- link favicon -->
+        <link
+            rel="apple-touch-icon"
+            sizes="57x57"
+            href="./assets/favicon/apple-icon-57x57.png"
+        />
+        <link
+            rel="apple-touch-icon"
+            sizes="60x60"
+            href="./assets/favicon/apple-icon-60x60.png"
+        />
+        <link
+            rel="apple-touch-icon"
+            sizes="72x72"
+            href="./assets/favicon/apple-icon-72x72.png"
+        />
+        <link
+            rel="apple-touch-icon"
+            sizes="76x76"
+            href="./assets/favicon/apple-icon-76x76.png"
+        />
+        <link
+            rel="apple-touch-icon"
+            sizes="114x114"
+            href="./assets/favicon/apple-icon-114x114.png"
+        />
+        <link
+            rel="apple-touch-icon"
+            sizes="120x120"
+            href="./assets/favicon/apple-icon-120x120.png"
+        />
+        <link
+            rel="apple-touch-icon"
+            sizes="144x144"
+            href="./assets/favicon/apple-icon-144x144.png"
+        />
+        <link
+            rel="apple-touch-icon"
+            sizes="152x152"
+            href="./assets/favicon/apple-icon-152x152.png"
+        />
+        <link
+            rel="apple-touch-icon"
+            sizes="180x180"
+            href="./assets/favicon/apple-icon-180x180.png"
+        />
+        <link
+            rel="icon"
+            type="image/png"
+            sizes="192x192"
+            href="./assets/favicon/android-icon-192x192.png"
+        />
+        <link
+            rel="icon"
+            type="image/png"
+            sizes="32x32"
+            href="./assets/favicon/favicon-32x32.png"
+        />
+        <link
+            rel="icon"
+            type="image/png"
+            sizes="96x96"
+            href="./assets/favicon/favicon-96x96.png"
+        />
+        <link
+            rel="icon"
+            type="image/png"
+            sizes="16x16"
+            href="./assets/favicon/favicon-16x16.png"
+        />
+        <link rel="manifest" href="./assets/favicon/manifest.json" />
+        <meta name="msapplication-TileColor" content="#ffffff" />
+        <meta
+            name="msapplication-TileImage"
+            content="./assets/favicon/ms-icon-144x144.png"
+        />
+        <meta name="theme-color" content="#ffffff" />
+
         <!-- link css -->
         <link rel="stylesheet" href="./assets/css/reset.css" />
         <link rel="stylesheet" href="./assets/css/style.css" />
         <title>My Project 2.1</title>
     </head>
-    <body style="height: 5000px">
+    <body>
         <!-- header -->
         <header class="header fixed">
             <div class="main-content">
                 <div class="body">
                     <section class="logo">
-                        <img src="./assets/css/icon/Logo.svg" alt="Besnik." />
+                        <a href="#"
+                            ><img
+                                src="./assets/css/icon/Logo.svg"
+                                alt="Besnik."
+                        /></a>
                     </section>
                     <nav class="navbar">
                         <ul class="list">
                             <li class="item active">
-                                <a href="#!">Home</a>
+                                <a href="#">Home</a>
                             </li>
                             <li class="item">
-                                <a href="#!">Features</a>
+                                <a href="#feature">Features</a>
                             </li>
                             <li class="item">
-                                <a href="#!">Pricing</a>
+                                <a href="#popular">Pricing</a>
                             </li>
                             <li class="item">
-                                <a href="#!">About</a>
+                                <a href="#feedback">About</a>
                             </li>
                             <li class="item">
-                                <a href="#!">Contact</a>
+                                <a href="#contact">Contact</a>
                             </li>
                         </ul>
                     </nav>
@@ -61,7 +143,8 @@
                             <h1 class="title">Words learner come here.</h1>
                             <p class="desc">
                                 Build skills with courses, certificates, and get
-                                online knowledge from our world-class platform.
+                                online knowledge from our
+                                <nobr>world-class</nobr> platform.
                             </p>
                             <dic class="cta-group">
                                 <button class="btn">Get Started</button>
@@ -125,7 +208,7 @@
             </section>
 
             <!-- feature -->
-            <section class="feature">
+            <section id="feature" class="feature">
                 <div class="main-content">
                     <div class="body">
                         <section class="feature-top">
@@ -195,7 +278,7 @@
             </section>
 
             <!-- popular -->
-            <section class="popular">
+            <section id="popular" class="popular">
                 <div class="main-content">
                     <div class="popular-top">
                         <span class="sub-title">C O U R S E S</span>
@@ -294,7 +377,7 @@
             </section>
 
             <!-- feedback -->
-            <section class="feedback">
+            <section id="feedback" class="feedback">
                 <div class="main-content">
                     <div class="body">
                         <section class="info-block">
@@ -356,6 +439,131 @@
                     </div>
                 </div>
             </section>
+
+            <!-- contact -->
+            <section id="contact" class="contact">
+                <div class="main-content">
+                    <div class="row">
+                        <div class="column">
+                            <h2 class="heading">Ready to Get Admit</h2>
+                            <p class="desc">
+                                Create your account and Boost your Career.
+                            </p>
+                        </div>
+                        <button class="btn">Get Started</button>
+                    </div>
+                </div>
+            </section>
         </main>
+
+        <!-- footer -->
+        <section class="footer">
+            <div class="main-content">
+                <div class="row">
+                    <div class="column">
+                        <a href="#"
+                            ><img
+                                src="./assets/css/icon/Logo.svg"
+                                alt="Besnik."
+                                class="logo"
+                        /></a>
+                    </div>
+                    <div class="column">
+                        <h3 class="title">Company</h3>
+                        <ul class="list">
+                            <li>
+                                <a href="#!">About</a>
+                            </li>
+                            <li>
+                                <a href="#!">Careers</a>
+                            </li>
+                            <li>
+                                <a href="#!">Press</a>
+                            </li>
+                        </ul>
+                    </div>
+                    <div class="column">
+                        <h3 class="title">Community</h3>
+                        <ul class="list">
+                            <li>
+                                <a href="#!">Team Plans</a>
+                            </li>
+                            <li>
+                                <a href="#!">Blog</a>
+                            </li>
+                            <li>
+                                <a href="#!">Students</a>
+                            </li>
+                            <li>
+                                <a href="#!">Schoolarships</a>
+                            </li>
+                        </ul>
+                    </div>
+                    <div class="column">
+                        <h3 class="title">Teaching</h3>
+                        <ul class="list">
+                            <li>
+                                <a href="#!">Become a teacher</a>
+                            </li>
+                            <li>
+                                <a href="#!">Teaching academy</a>
+                            </li>
+                        </ul>
+                    </div>
+                    <div class="column">
+                        <h3 class="title">Be social</h3>
+                        <ul class="list">
+                            <li>
+                                <a href="#!">
+                                    <div class="social">
+                                        <img
+                                            src="./assets/css/icon/twitter.svg"
+                                            alt=""
+                                        />
+                                    </div>
+                                    <span>Twitter</span>
+                                </a>
+                            </li>
+                            <li>
+                                <a href="#!">
+                                    <div class="social">
+                                        <img
+                                            src="./assets/css/icon/facebook.svg"
+                                            alt=""
+                                        />
+                                    </div>
+                                    <span>Facebook</span>
+                                </a>
+                            </li>
+                            <li>
+                                <a href="#!">
+                                    <div class="social">
+                                        <img
+                                            src="./assets/css/icon/instagram.svg"
+                                            alt=""
+                                        />
+                                    </div>
+                                    <span>Instagram</span>
+                                </a>
+                            </li>
+                            <li>
+                                <a href="#!">
+                                    <div class="social">
+                                        <img
+                                            src="./assets/css/icon/linkedin.svg"
+                                            alt=""
+                                        />
+                                    </div>
+                                    <span>Linkedin</span>
+                                </a>
+                            </li>
+                        </ul>
+                    </div>
+                </div>
+                <div class="copyright">
+                    <p>© Copyright 2020 by Mayad Ahmed. All right reserved.</p>
+                </div>
+            </div>
+        </section>
     </body>
 </html>
